[package]
name = "teletype"
version = "0.8.0"
edition = "2021"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "Teletype emulator (via 88-SIO board) for my 8080 emulator"
keywords = ["emulation", "emulator", "teletype", "8080", "SIO"]
categories = ["emulators"]
license = "MIT"
repository = "https://github.com/nicolasbauw/teletype"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zilog_z80 = { path = "../ZilogZ80" }
console = "0.14.1"
