[package]
name = "teletype"
version = "0.11.0"
edition = "2021"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "Teletype emulator (via 88-SIO board) for my 8080 emulator"
keywords = ["emulation", "emulator", "teletype", "8080", "SIO"]
categories = ["emulators"]
license = "MIT"
repository = "https://github.com/nicolasbauw/teletype"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel8080 = "0.15.0"
console = "0.15.2"
toml = "0.7.0"
serde = "1.0.152"
serde_derive = "1.0.152"
